Sun Sep 29 13:11:13 2002  Manish Singh  <yosh@gimp.org>

	* gtk/gtktypeutils.h: use #defines instead of enum for
	GtkFundamentalType compat, to prevent 64-bit vs. 32-bit
	confusion (#90400)

2002-09-29  Tor Lillqvist  <tml@iki.fi>

	* configure.in: Instead of forcing -fnative-struct into CFLAGS
	when using gcc for Win32, check for gcc version 3.x which uses
	-mms-bitfields instead. Also check if either of these switches is
	actually available at all, and warn if not. Thanks to Soren
	Andersen for the inspiration. (#93965)

2002-09-01  Soeren Sandmann  <sandmann@daimi.au.dk>

	* gtk/gtkimcontext.c, gtk/gtktreeviewcolumn.c:

	Minor documentation fixes. 
	(#80021, Yao Zhang; #75567, #75279, Vitaly Tishkov)

2002-09-28  Matthias Clasen  <maclas@gmx.de>

	* gdk/x11/gdkwindow-x11.c (_gdk_windowing_window_init): Make
	drawing to the root window work.  (#89492)

Fri Sep 27 18:14:00 2002  Owen Taylor  <otaylor@redhat.com>

	(#91249, Thomas Leonard)

	* gtk/gtkselection.c (gtk_selection_convert): Initialize
	idle time to 0.

	* gtk/gtkselection.c: Up idle timeout to 5 minutes
	from 5 seconds.

Fri Sep 27 17:40:47 2002  Owen Taylor  <otaylor@redhat.com>

	* modules/input/Makefile.am: Patch from J. Ali Harlow
	to avoid generating gtk.immodules when cross-compiling.
        (#87774)
	
Fri Sep 27 14:30:34 2002 Eric Warmenhoven <eric@warmenhoven.org>

	* gdk/Makefile.am gdk/gdkkeynames.c gdk/linux-fb/gdkmain-fb.c
	gdk/win32/gdkkeys-win32.c: Move gdk_keval_name and
	gdk_keyval_from_name to new gdkkeynames.c, share implementation for
	linux-fb and win32 (#94123)

	* gdk/linux-fb/Makefile.am gdk/linux-fb/gdkkeyboard-fb.c
	gdk/linux-fb/gdkmain-fb.c gdk/linux-fb/gdkmouse-fb.c: add
	-DG_DISABLE_DEPRECATED and -DGDK_PIXBUF_DISABLE_DEPRECATED to compile
	flags

	* gdk/linux-fb/gdkdisplay-fb.c: prevent segfault if display can't
	initialize

	* gdk/linux-fb/gdkkeyboard-fb.c: better parsing of keycodes

	* gdk/linux-fb/gdkwindow-fb.c: add stubs for new functions
